# slipstream

./: Cargo.toml  README.adoc  docker-compose.yml  slipstream.yml
.github/workflows/: rust.yml
schemas.d/: hello.yml  other.yml
schemas.d/pings/: v1.yml
src/: errors.rs  main.rs  schemas.rs  settings.rs  streams.rs
